{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "b5aaf54d-ebe5-4b09-9589-dd77adf73a70",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8c394bd2-d213-41bb-ba1a-b4117ad7e49f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "12b39461-1865-4cd0-852e-aef12aa4fe56",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "60d4f076-fde1-47e7-b8c5-839cff8edc42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "c006001d-ecab-4e60-9475-409ddf247ab6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "ca8e44d1-f861-4703-a191-e95ceab77726",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HoldCrouch",
                    "type": "Button",
                    "id": "d0de4b8a-e5bf-4377-9dd4-63aebb73a08c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleCrouch",
                    "type": "Button",
                    "id": "b8d65a4e-5bd4-4040-b6e7-a0dc883b8959",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "3b1c16d9-9731-4477-8aa3-a02bb1ca270a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapWeapon",
                    "type": "Value",
                    "id": "bc567fe0-5a7e-423f-95e6-b2633f81cc62",
                    "expectedControlType": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WeaponSlot1",
                    "type": "Button",
                    "id": "0471eb54-4a6f-42c4-bf9f-182a95db53b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlot2",
                    "type": "Button",
                    "id": "7a3da911-fe7e-4fe3-87c9-3fd6ca83c7ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlot3",
                    "type": "Button",
                    "id": "8fd43667-19d9-4240-896b-0a0346ff0984",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "2ed0fe8d-b4b7-4970-96c1-66ab53315e2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "4a6efd2f-690c-489b-85a4-53934ac0a1cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "afb99f52-2613-42a0-8d43-a5c370b51f40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "65647ecb-3504-46bd-a55e-f3931b692d72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5b02eeb-3cfb-4093-8d4f-403dd45c0ddc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "384bbc1b-ef51-4ad0-b429-4abd9c88d57a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "300a61ae-673e-4da3-b5e3-febc59d4ed13",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0f51a518-60a7-4493-b98f-adac9ccffef9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ed209cb0-a7fc-45b8-87ff-f40144ce06f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0a1c3ec7-395b-4f6e-b810-df9b247939a9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "59d3bb69-d17f-46f4-840b-e82936507be6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6002e6ed-2311-4cb7-8f17-b409eac1eb8b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1989be5c-0674-4b20-969f-1bcc53faeacf",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a43f6f70-b375-4dcc-9efe-be04f96d77d2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69a26bf8-2774-4cd0-97ba-619dc76b0220",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9433b099-deb3-4b6f-ae8a-c9fafef8315e",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b364f5bd-301f-408d-b9b9-27049343f5c5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26f2bff4-39c5-4c47-a1c5-c8917924a12f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de8b5b41-023a-45fe-a7d1-12bc5f121f61",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "HoldCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7e0e3f8-51e1-40f4-b6cc-a6b25deb0636",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "HoldCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "740b5b97-8171-457a-8627-5bec0c61b3f1",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "ToggleCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "417277b9-30a6-4272-bdf1-1b662dead212",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ToggleCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17c27d6d-06ff-4944-96ac-2e488fcf29ea",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff2b23e5-e1e9-492d-a612-50de6430018d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd57d115-9b7f-4816-afd7-4816dc11ceaf",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "SwapWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d3b817d-7818-423b-a4d0-12832fd8afcf",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SwapWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb9b2c6d-994d-496f-9d52-c1de0202eca7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "WeaponSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b20c2ea9-7f5f-49ca-9acd-6b8c4f580889",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ef6c609-5653-4f85-9cc5-80db691228ce",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "WeaponSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e02f3877-ba47-4aaa-9a18-8cd1b3502e7a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "366b97a1-4257-4ba9-8d56-5f102aad6b62",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "WeaponSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c38febe-3696-4698-9cc3-f0f6e462138c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WeaponSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc7c787e-da0a-49df-b60d-2435c4b8b8cf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7b105f9-4fc0-4186-91ab-0a5ee02d9073",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4820489b-d6e4-4f97-8ccc-18e2c1f97540",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c995548-0384-4d5d-8427-b3c94f497a3f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ca49b7b-07eb-45b4-b071-c0817c83f712",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6075fc92-f7bf-446d-ac62-ecf24b8dd07e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dfdbe1a-1fab-4157-a8ec-6d8a65892312",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69d75106-bb4f-4031-8976-14ce25e8f03f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "7ea46bef-a0f5-421c-bcb1-ce7a1c9455e0",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "e40d5912-6826-4101-97da-c497b9019d30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb6cf7f4-f61b-4b19-8b7a-bd6854c3c610",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56f5f14f-efe7-4452-8a47-a65caf35f7e1",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}